Compute statistically value and export to text file

--- a/notebooks/ALL_TEAM_2015_2020_PYEX.ipynb
+++ b/notebooks/ALL_TEAM_2015_2020_PYEX.ipynb
@@ -15,51 +15,42 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully created the directory yearGraphs \n",
-      "/Users/lamnguyen/Downloads/dmp/Basketball-Stats/grandTeamLogs/15\n",
-      "0\n",
-      "17\n",
-      "0\n",
-      "2\n",
-      "18\n",
-      "14\n",
-      "38\n",
-      "32\n",
-      "6\n",
-      "2\n",
-      "37\n",
-      "8\n",
-      "33\n",
-      "6\n",
-      "25\n",
-      "45\n",
-      "1\n",
-      "38\n",
-      "30\n",
-      "16\n",
-      "16\n",
-      "7\n",
-      "29\n",
-      "39\n",
-      "21\n",
-      "3\n",
-      "1\n",
-      "6\n",
-      "9\n",
-      "0\n"
+      "Successfully created the directory yearGraphs \n"
      ]
     }
    ],
    "source": [
+    "#!/usr/bin/env python\n",
+    "# coding: utf-8\n",
+    "\n",
+    "# In[1]:\n",
+    "\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import math\n",
+    "\n",
+    "# In[2]:\n",
+    "\n",
+    "\n",
     "team_code = ['TOR','NYK','BOS','BRK','PHI','CLE','IND','DET','CHI','MIL','MIA','ATL','CHO','WAS','ORL','OKC','POR','UTA','DEN','MIN','GSW','LAC','SAC','PHO','LAL','SAS','DAL','MEM','HOU','NOP']\n",
     "team_prediction = [0 for i in range(0,30)]\n",
     "team_result = [0 for i in range(0,30)]\n",
+    "year_deviation = [0 for i in range(0,6)]\n",
+    "residual_variance = [0 for i in range(0,6)]\n",
+    "year_stDev = [0 for i in range(0,6)]\n",
+    "sum_of_deviations = 0\n",
+    "count = 0\n",
     "os.chdir('../grandTeamLogs')\n",
     "path = \"yearGraphs\"\n",
     "try:\n",
@@ -70,42 +61,39 @@
     "else:\n",
     "    print (\"Successfully created the directory %s \" % path)\n",
     "def pythagorean_expectation(scored, allowed):\n",
-    "    return round((scored**13.91/(allowed**13.91+scored**13.91))*100)\n",
-    "for x in range(15,16):\n",
+    "    return round(scored**13.91/(allowed**13.91+scored**13.91),4)\n",
+    "for x in range(15,21):\n",
     "    os.chdir(str(x))\n",
-    "    print(os.getcwd())\n",
-    "    df = pd.read_csv('ALL-TEAMS.csv')\n",
     "    for code in team_code:\n",
-    "        pts_scored = df[df.abbr == code]['pts'].sum()\n",
-    "        pts_allowed = df[df.abbr == code]['opp_pts'].sum()\n",
+    "        df = pd.read_csv('20'+ str(x) + '-' + code + '.csv')\n",
+    "        pts_scored = sum(df.pts)\n",
+    "        pts_allowed = sum(df.opp_pts)\n",
     "        result = pythagorean_expectation(pts_scored, pts_allowed)\n",
     "        team_prediction[team_code.index(code)] = result\n",
-    "        print(df[df.abbr == code]['wins'].iloc[-1])\n",
-    "#         print(df[df.abbr == code]['wins'].max())\n",
-    "#         if df[df.abbr == code]['wins'].iloc[-1] != df[df.abbr == code]['wins'].max():\n",
-    "#             team_result[team_code.index(code)] = round(((df[df.abbr == code]['wins'].iloc[-1]+df[df.abbr == code]['wins'].max())/df[df.abbr == code].shape[0])*100)\n",
-    "#         else:\n",
-    "#             team_result[team_code.index(code)] = round((df['wins'].iloc[-1]/df.shape[0])*100)\n",
-    "#     os.chdir('../')\n",
-    "# team_result\n",
-    "#     ypos = np.arange(0,3*len(team_code),3)\n",
-    "#     ypos2 = [i+1 for i in ypos]\n",
-    "#     fig, ax = plt.subplots()\n",
-    "#     plt.xticks(ypos, team_code)\n",
-    "#     ax.bar(ypos, team_prediction,width=1,color='r',label=\"Predicted %\")\n",
-    "#     ax.bar(ypos2, team_result,width=1,color='b',label=\"True %\")\n",
-    "#     ax.set_xlabel('Team')\n",
-    "#     ax.set_ylabel('Winning Percentage')\n",
-    "#     plt.title('All teams 20'+ str(x) + ' Season')\n",
-    "#     ax.legend()\n",
-    "#     plt.xticks(rotation=90)\n",
-    "#     # plt.rcParams['figure.figsize'] = [12, 8]\n",
-    "#     # plt.rcParams['figure.dpi'] = 100\n",
-    "#     plt.gcf().subplots_adjust(bottom=0.17)\n",
-    "#     plt.show()\n",
-    "#     os.chdir('../'+path)\n",
-    "#     fig.savefig('ALLTEAM-20'+ str(x) +'.pdf')\n",
-    "#     os.chdir('../')"
+    "        if df['wins'].iloc[-1] != df['wins'].max():\n",
+    "            team_result[team_code.index(code)] = round(((df['wins'].iloc[-1]+df['wins'].max())/df.shape[0]),4)\n",
+    "        else:\n",
+    "            team_result[team_code.index(code)] = round((df['wins'].iloc[-1]/df.shape[0]),4)\n",
+    "    true_winning_mean = round(sum(team_result) / len(team_code),4)\n",
+    "    for team in team_prediction:\n",
+    "        sum_of_deviations += (team - true_winning_mean)**2\n",
+    "    year_deviation[count] = round(sum_of_deviations,4)\n",
+    "    count += 1\n",
+    "    sum_of_deviations = 0\n",
+    "    os.chdir('../')\n",
+    "    \n",
+    "for sum in year_deviation:\n",
+    "    residual_variance[year_deviation.index(sum)] = round(sum / len(team_code),6)\n",
+    "    year_stDev[year_deviation.index(sum)] = round(math.sqrt(sum / len(team_code)),6)\n",
+    "    \n",
+    "f = open(\"resultPE.txt\",\"a\")\n",
+    "f.write('Sum of Deviations:\\n')\n",
+    "f.writelines(\"%s\\n\" % deviation for deviation in year_deviation)\n",
+    "f.write('Residual Variance:\\n')\n",
+    "f.writelines(\"%s\\n\" % variance for variance in residual_variance)\n",
+    "f.write('Standard Deviation:\\n')\n",
+    "f.writelines(\"%s\\n\" % std for std in year_stDev)\n",
+    "f.close()"
    ]
   },
   {
